adicionando local storage

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^82.0.0",
     "moment": "^2.29.4",
     "nodemailer": "^6.9.1",
+    "pdfreader": "^3.0.0",
     "read-excel-file": "^5.6.1"
   }
 }
